# pyaudiogaming

./: __init__.py  bgsounds.py  file.py  gui.py  inputBox.pyd  key.py  keyrstr.py  menu.py  pyproject.toml  setup.py  sound_positioning.py  window.py
accessible_output2/: __init__.py
accessible_output2/outputs/: base.py  nvda.py  sapi5.py  zdsr.py
examples/: main.py
pyaudiogaming/: bgfx.py  timer.py
pyaudiogaming.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyaudiogaming/accessible_output2/outputs/: auto.py
pyaudiogaming/sound_lib/: __init__.py  music.py  output.py  sample.py
pyaudiogaming/sound_lib/effects/: __init__.py  bass_fx.py
pyaudiogaming/sound_lib/lib/x64/: a.py
sound_lib/: channel.py  config.py
sound_lib/effects/: bass.py  fx.py
